# cursor-subagent

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  lefthook.yml  pyproject.toml  setup.py
.cursor/agents/subagent-tester/: .cursorrules  description.txt  mcp.json  subagent_tester_mcp.py
.cursor/rules/: cursor-subagent.mdc
cursor_subagent/: __init__.py  __main__.py  cli.py  core.py  redirect_interpose.c  server.py
tests/: __init__.py  test_cursor_subagent.py  test_server.py
