[project]
name = "cursor-subagent"
version = "0.1.0"
description = "cursor-agent wrapper with isolated agent configurations"
readme = "README.md"
requires-python = ">=3.11"
license = "CC-BY-NC-SA-4.0"
authors = [
    {name = "Yoav Shai"}
]
keywords = ["cursor", "ai", "mcp", "agents", "subagent", "llm", "cursor-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "loguru>=0.7.3",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/gergesh/cursor-subagent"
Repository = "https://github.com/gergesh/cursor-subagent"
Documentation = "https://github.com/gergesh/cursor-subagent#readme"

[project.scripts]
cursor-subagent = "cursor_subagent.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cursor_subagent"]

[tool.setuptools.package-data]
cursor_subagent = ["redirect_interpose.c", "libcursor_redirect.dylib", ".cursor/**/*"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
